--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -47,8 +47,16 @@
                     $('#form-messages').html('<p style="color: green;">Your message has been recorded! We will get back to you soon.</p>');
                     $('#contact_form')[0].reset();
                     grecaptcha.reset();
+                    // Clear the message after 5 seconds
+                    setTimeout(function() {
+                        $('#form-messages').html('');
+                    }, 5000);
                 } else {
                     $('#form-messages').html('<p style="color: red;">An error occurred. Please try again.</p>');
+                    // Clear the message after 5 seconds
+                    setTimeout(function() {
+                        $('#form-messages').html('');
+                    }, 5000);
                 }
             },
             error: function(xhr, errmsg, err) {
@@ -65,6 +73,10 @@
                 } catch (e) {
                     $('#form-messages').html('<p style="color: red;">An error occurred. Please try filling in the form again.</p>');
                 }
+                // Clear the message after 5 seconds
+                setTimeout(function() {
+                    $('#form-messages').html('');
+                }, 5000);
             }
         });
     }
@@ -133,33 +145,4 @@
     </section>
     <!-- Contact form area end here -->
 </main>
-<!-- Back to top area start here -->
-<div class="scroll-up">
-    <svg class="scroll-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-        <path d="M50,1 a49,49  ,1 ,98 a49,49  ,1 ,-98" />
-    </svg>
-</div>
-<!-- Back to top area end here -->
-
-<!-- Jquery 3.7.1 Min Js -->
-<script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-<!-- Bootstrap min Js -->
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<!-- Swiper bundle min Js -->
-<script src="{% static 'js/swiper-bundle.min.js' %}"></script>
-<!-- Counterup min Js -->
-<script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-<!-- Wow min Js -->
-<script src="{% static 'js/wow.min.js' %}"></script>
-<!-- Magnific popup min Js -->
-<script src="{% static 'js/magnific-popup.min.js' %}"></script>
-<!-- Nice select min Js -->
-<script src="{% static 'js/nice-select.min.js' %}"></script>
-<!-- Isotope pkgd min Js -->
-<script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
-<!-- Waypoints Js -->
-<script src="{% static 'js/jquery.waypoints.js' %}"></script>
-<!-- Script Js -->
-<script src="{% static 'js/script.js' %}"></script>
-
 {% endblock %}
