Add: Tawk.to chatbot on support page

--- a/website/templates/website/support.html
+++ b/website/templates/website/support.html
@@ -15,6 +15,19 @@
         padding-bottom: 130px;
     }
 </style>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/66d0646050c10f7a00a1aaa0/1i6f0g6ae';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 <main>
 <!-- Page banner area start here -->
         <section class="page-banner bg-image pt-130 pb-130">
