--- a/website/templates/website/product_detail.html
+++ b/website/templates/website/product_detail.html
@@ -168,7 +168,7 @@
                                                 <input type="text" placeholder="Enter Discount Code">
                                             </div> {% endcomment %}
                                         </div>
-                                        <a href="#0" class="d-block text-center btn-one mt-40"><i
+                                        <a href="{% url 'cart' %}" class="d-block text-center btn-one mt-40"><i
                                                 class="fa-solid fa-basket-shopping pe-2"></i> <span
                                                 class="text-capitalize">
                                                 add to cart
